--- a/src/templates/article.module.css
+++ b/src/templates/article.module.css
@@ -4,8 +4,14 @@
   font-size: 80%;
 }
 
+.article__content__wrapper {
+  max-width: var(--content-w-blog);
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
 .article {
-  max-width: var(--content-w-regular);
+  max-width: 100%;
   margin: 0 auto;
   padding: 0 2rem;
 }
@@ -39,6 +45,6 @@
 }
 
 .article__content {
-  max-width: var(--content-w-narrow);
+  max-width: var(--content-w-blog);
   margin: 3rem auto;
 }
