--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -2,3 +2,13 @@
   padding-bottom: 3rem;
   font-size: 2rem;
 }
+
+@media screen and (max-width: 768px) {
+  .hero {
+    font-size: 1rem;
+  }
+}
+
+.footer {
+  text-align: center;
+}
