--- a/src/templates/articles.module.css
+++ b/src/templates/articles.module.css
@@ -1,16 +1,19 @@
 .articlelist {
   max-width: var(--content-w-regular);
   margin: 0 auto;
-  padding: 0 0rem;
+  padding: 1.45rem;
   max-width: var(--content-w-regular);
   width: 100%;
 }
 
-.articlelist h2 {
-  margin-top: 3rem;
+.heading {
+  margin-bottom: 3rem;
   font-size: 4rem;
   text-align: center;
   font-weight: 700;
+}
+
+.articlelist h2 {
 }
 
 .articlelist ul {
