--- a/src/templates/article.module.css
+++ b/src/templates/article.module.css
@@ -48,3 +48,24 @@
   max-width: var(--content-w-blog);
   margin: 3rem auto;
 }
+
+.article__content h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+.article__content h2 {
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+.article__content h3 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+.article__content h5 {
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+.article__content h6 {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
