--- a/src/templates/article.module.css
+++ b/src/templates/article.module.css
@@ -20,7 +20,7 @@
 }
 
 .featimg {
-  margin-top: 3rem;
+  margin-top: 0rem;
   margin-left: -2rem;
   margin-right: -2rem;
 }
@@ -29,7 +29,7 @@
   margin-bottom: 1rem;
   padding-top: 0rem;
   font-size: 2rem;
-  text-align: center;
+  /* text-align: center; */
 }
 
 @media screen and (min-width: 768px) {
@@ -44,10 +44,19 @@
   content: "- — -";
 }
 
-.article__meta,
+ 
 .article__tax {
-  margin-top: 0;
-  text-align: center;
+  margin-bottom: 30px;
+
+  /* text-align: center; */
+}
+@media screen and (min-width: 768px) {
+  .article__meta,
+  .article__tax {
+    margin-bottom: 0px;
+
+    /* text-align: center; */
+  }
 }
 
 .article__content {
